--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "aegir": "^14.0.0",
+    "bs58": "^4.0.1",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "execa": "~0.10.0",
@@ -46,5 +47,8 @@
   "browser": {
     "./test/utils/repo.js": "./test/utils/repo-browser.js"
   },
-  "pre-push": ["lint", "test"]
+  "pre-push": [
+    "lint",
+    "test"
+  ]
 }
