--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "homepage": "https://github.com/ipfs-shipyard/peer-star-app#readme",
   "dependencies": {
     "debug": "^3.1.0",
+    "delay": "^3.0.0",
     "ipfs": "~0.29.2",
     "libp2p-websocket-star": "~0.8.0",
     "multiaddr": "^5.0.0",
+    "p-queue": "^2.4.2",
     "peer-id": "~0.10.7",
     "peer-info": "~0.14.1"
   },
