--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ipfs-shipyard/peer-star-app#readme",
   "dependencies": {
+    "asino": "~0.3.3",
     "debug": "^3.1.0",
     "delay": "^3.0.0",
     "ipfs": "~0.29.2",
