--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/ipfs-shipyard/peer-star-app#readme",
   "dependencies": {
     "asino": "~0.3.3",
-    "datastore-core": "^0.4.0",
+    "datastore-core": "~0.4.0",
     "debug": "^3.1.0",
     "delay": "^3.0.0",
     "ipfs": "~0.29.2",
@@ -35,7 +35,7 @@
     "multiaddr": "^5.0.0",
     "multihashing": "~0.3.2",
     "p-queue": "^2.4.2",
-    "peer-id": "^0.10.7",
+    "peer-id": "~0.10.7",
     "peer-info": "~0.14.1",
     "pull-pushable": "^2.2.0",
     "pull-stream": "^3.6.8",
