--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "peer-id": "~0.10.7",
     "peer-info": "~0.14.1",
     "pull-pushable": "^2.2.0",
-    "pull-stream": "^3.6.8",
-    "pull-through": "^1.0.18"
+    "pull-stream": "^3.6.8"
   },
   "devDependencies": {
     "aegir": "^14.0.0",
