handles vector clock from remote

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "peer-id": "~0.10.7",
     "peer-info": "~0.14.1",
     "pull-pushable": "^2.2.0",
-    "pull-stream": "^3.6.8"
+    "pull-stream": "^3.6.8",
+    "vectorclock": "0.0.0"
   },
   "devDependencies": {
     "aegir": "^14.0.0",
