--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "delay": "^3.0.0",
     "interface-datastore": "~0.4.2",
     "ipfs": "~0.29.2",
+    "leftpad": "0.0.1",
     "libp2p-websocket-star": "~0.8.0",
     "lodash.debounce": "^4.0.8",
     "multiaddr": "^5.0.0",
