--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hat": "0.0.3",
     "ipfs-repo": "~0.22.1",
     "libp2p-websocket-star-rendezvous": "~0.2.3",
+    "lodash.uniq": "^4.5.0",
     "pull-pair": "^1.1.0",
     "rimraf": "^2.6.2",
     "sinon": "^5.0.10"
