--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "leftpad": "0.0.1",
     "libp2p-websocket-star": "~0.8.0",
     "lodash.debounce": "^4.0.8",
+    "msgpack-lite": "^0.1.26",
     "multiaddr": "^5.0.0",
     "multihashing": "~0.3.2",
     "p-queue": "^2.4.2",
