--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Peer-Star App support",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "npm run test:node && npm run test:browser",
+    "test:node": "aegir test -t node",
+    "test:browser": "aegir test -t browser",
     "lint": "aegir lint"
   },
   "repository": {
