linting dep versions

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "datastore-core": "~0.4.0",
     "debug": "^3.1.0",
     "delay": "^3.0.0",
-    "delta-crdts": "^0.2.0",
+    "delta-crdts": "~0.2.0",
     "interface-datastore": "~0.4.2",
     "ipfs": "~0.29.2",
     "leftpad": "0.0.1",
     "libp2p-websocket-star": "~0.8.0",
     "lodash.debounce": "^4.0.8",
-    "msgpack-lite": "^0.1.26",
+    "msgpack-lite": "~0.1.26",
     "multiaddr": "^5.0.0",
     "multihashing": "~0.3.2",
     "p-queue": "^2.4.2",
