--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -28,7 +28,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "libp2p-websocket-star-rendezvous": "^0.2.3",
+    "libp2p-websocket-star-rendezvous": "~0.2.3",
     "object-assign": "4.1.1",
     "peer-star-app": "file:../../",
     "postcss-flexbugs-fixes": "3.2.0",
