--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,26 @@
-os:
-- linux
+sudo: false
 language: node_js
-node_js:
-- '8'
-before_install:
-  - npm i -g npm@6.0.0
-cache:
-  directories:
-    - node_modules
+
+matrix:
+  include:
+  - node_js: 6
+    env: CXX=g++-4.8
+  - node_js: 8
+    env: CXX=g++-4.8
+    #  - node_js: stable
+    #    env: CXX=g++-4.8
+
 script:
   - npm test
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+addons:
+  firefox: 'latest'
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
