--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peer-star-app",
   "version": "0.1.0",
-  "description": "Peer-Star App support",
+  "description": "Peer-Star App support for real-time collaborative DApps built on top of IPFS",
   "main": "src/index.js",
   "scripts": {
     "test": "npm run test:node && npm run test:browser",
