--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "interface-datastore": "~0.4.2",
     "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules",
     "leftpad": "0.0.1",
+    "libp2p-crypto": "^0.13.0",
     "libp2p-websocket-star": "^0.8.1",
     "lodash.debounce": "^4.0.8",
     "msgpack-lite": "~0.1.26",
