--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npm run test:node && npm run test:browser",
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser",
-    "lint": "aegir lint"
+    "lint": "standard src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,8 @@
     "interface-datastore": "~0.4.2",
     "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules",
     "leftpad": "0.0.1",
-    "libp2p-websocket-star": "^0.8.1",
+    "libp2p-crypto": "~0.13.0",
+    "libp2p-websocket-star": "~0.8.1",
     "lodash.debounce": "^4.0.8",
     "msgpack-lite": "~0.1.26",
     "multiaddr": "^5.0.0",
@@ -59,7 +60,8 @@
     "lodash.uniq": "^4.5.0",
     "pull-pair": "^1.1.0",
     "rimraf": "^2.6.2",
-    "sinon": "^5.1.1"
+    "sinon": "^5.1.1",
+    "standard": "^11.0.1"
   },
   "browser": {
     "./test/utils/repo.js": "./test/utils/repo-browser.js"
