--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "delta-crdts": "^0.2.8",
     "interface-datastore": "~0.4.2",
     "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules-2",
+    "ipfs-api": "^22.2.4",
     "leftpad": "0.0.1",
     "libp2p-crypto": "~0.13.0",
     "libp2p-websocket-star": "~0.8.1",
+    "libp2p-websockets": "^0.12.0",
     "lodash.debounce": "^4.0.8",
     "msgpack-lite": "~0.1.26",
     "multiaddr": "^5.0.0",
