--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules-2",
     "ipfs-api": "^22.2.4",
     "leftpad": "0.0.1",
+    "libp2p-bootstrap": "^0.9.3",
     "libp2p-crypto": "~0.13.0",
     "libp2p-websocket-star": "~0.8.1",
     "libp2p-websockets": "^0.12.0",
