--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "homepage": "https://github.com/ipfs-shipyard/peer-star-app#readme",
   "dependencies": {
     "asino": "~0.3.3",
+    "browser-process-hrtime": "^0.1.2",
     "datastore-core": "~0.4.0",
     "debug": "^3.1.0",
     "delay": "^3.0.0",
     "delta-crdts": "^0.2.8",
+    "frequency-counter": "^1.0.1",
     "interface-datastore": "~0.4.2",
     "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules-3",
     "ipfs-api": "^22.2.4",
