--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "color-hash": "^1.0.3",
     "css-loader": "0.28.7",
     "d3": "^5.5.0",
     "dotenv": "4.0.0",
