--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "counter",
+  "name": "peer-star-example-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "color-hash": "^1.0.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -31,12 +32,13 @@
     "libp2p-websocket-star-rendezvous": "~0.2.3",
     "object-assign": "4.1.1",
     "peer-star-app": "file:../../",
+    "peer-star-network-vis-react": "^0.1.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
