--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser",
     "lint": "standard src/**/*.js",
-    "test:perf": "mocha test/performance/all.js"
+    "test:perf": "mocha test/performance/all.js",
+    "pinner": "node bin/pinner"
   },
   "repository": {
     "type": "git",
