chore: update to IPFS 0.32
Includes changes to create a libp2p node from a function.

Tests all passing locally for me \o/

License: MIT
Signed-off-by: Alan Shaw <alan@tableflip.io>

--- a/package.json
+++ b/package.json
@@ -40,14 +40,17 @@
     "delta-crdts": "^0.3.0",
     "frequency-counter": "^1.0.1",
     "interface-datastore": "~0.4.2",
-    "ipfs": "git+https://git@github.com/pgte/js-ipfs.git#feat/libp2p-dynamic-modules-3",
+    "ipfs": "^0.32.0-rc.2",
     "ipfs-api": "^22.2.4",
     "leftpad": "0.0.1",
+    "libp2p": "^0.23.1",
     "libp2p-bootstrap": "^0.9.3",
     "libp2p-crypto": "~0.13.0",
+    "libp2p-mplex": "^0.8.0",
+    "libp2p-secio": "^0.10.0",
     "libp2p-websocket-star": "~0.8.1",
     "libp2p-websockets": "^0.12.0",
-    "lodash.debounce": "^4.0.8",
+    "lodash": "^4.17.10",
     "msgpack-lite": "~0.1.26",
     "multiaddr": "^5.0.0",
     "multihashing": "~0.3.2",
