--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "delta-crdts": "^0.3.0",
     "frequency-counter": "^1.0.1",
     "interface-datastore": "~0.4.2",
-    "ipfs": "^0.32.0-rc.2",
+    "ipfs": "0.32.2",
     "ipfs-api": "^22.2.4",
     "leftpad": "0.0.1",
     "libp2p": "^0.23.1",
