--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "debug": "^3.1.0",
     "delay": "^3.0.0",
     "delta-crdts": "^0.3.0",
+    "delta-crdts-msgpack-codec": "^0.2.0",
     "frequency-counter": "^1.0.1",
     "interface-datastore": "~0.4.2",
     "ipfs": "0.32.2",
