--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -3,102 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "9.2.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-preset-react-app": "^5.0.3",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "color-hash": "^1.0.3",
-    "css-loader": "1.0.0",
-    "dotenv": "6.1.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.6.1",
-    "eslint-config-react-app": "^3.0.3",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "3.0.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "fast-diff": "^1.1.2",
-    "file-loader": "2.0.0",
-    "fs-extra": "7.0.0",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "23.6.0",
-    "libp2p-websocket-star-rendezvous": "~0.2.3",
-    "object-assign": "4.1.1",
-    "peer-star-app": "file:../../",
-    "peer-star-network-vis-react": "^0.1.2",
+    "fast-diff": "^1.2.0",
+    "libp2p-websocket-star-rendezvous": "^0.2.3",
+    "peer-star-app": "../../",
+    "peer-star-network-vis-react": "^0.1.3",
     "peer-star-react": "^0.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "promise": "8.0.2",
-    "prop-types": "^15.6.2",
-    "raf": "3.4.0",
-    "react": "^16.4.2",
-    "react-dev-utils": "^6.0.5",
-    "react-dom": "^16.4.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "resolve": "1.8.1",
-    "style-loader": "0.23.1",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "url-loader": "1.1.2",
-    "vectorclock": "0.0.0",
-    "webpack": "4.20.2",
-    "webpack-dev-server": "3.1.9",
-    "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "3.0.0"
+    "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "react-scripts start",
     "start:rv": "rendezvous",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
