--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "standard src/**/*.js",
     "lint:fix": "standard --fix src/**/*.js",
     "test:perf": "mocha test/performance/all.js",
-    "pinner": "node bin/pinner"
+    "pinner": "node bin/pinner",
+    "sim:watch": "watchify -v --debug sim/javascripts -o sim/sim.js"
   },
   "bin": {
     "pinner": "bin/pinner"
@@ -36,7 +37,6 @@
     "asino": "~0.3.3",
     "big-integer": "^1.6.36",
     "browser-process-hrtime": "^1.0.0",
-    "d3": "^5.7.0",
     "datastore-core": "~0.6.0",
     "debug": "^4.1.0",
     "delay": "^4.1.0",
@@ -68,9 +68,9 @@
   "devDependencies": {
     "aegir": "^17.0.0",
     "babel-eslint": "^10.0.1",
-    "browserify": "^16.2.3",
     "bs58": "^4.0.1",
     "chai": "^4.1.2",
+    "d3": "^5.7.0",
     "dirty-chai": "^2.0.1",
     "execa": "~1.0.0",
     "hat": "0.0.3",
@@ -80,7 +80,8 @@
     "pull-pair": "^1.1.0",
     "rimraf": "^2.6.2",
     "sinon": "^7.1.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "watchify": "^3.11.0"
   },
   "browser": {
     "./test/utils/repo.js": "./test/utils/repo-browser.js"
