--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ipfs-api": "^25.0.0",
     "leftpad": "0.0.1",
     "libp2p": "~0.23.1",
-    "libp2p-bootstrap": "^~.9.3",
+    "libp2p-bootstrap": "~0.9.3",
     "libp2p-crypto": "~0.14.0",
     "libp2p-mplex": "~0.8.0",
     "libp2p-secio": "~0.10.0",
