--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "lodash.uniq": "^4.5.0",
     "pull-pair": "^1.1.0",
     "rimraf": "^2.6.2",
-    "sinon": "^7.1.0",
-    "standard": "^12.0.1"
+    "sinon": "^7.1.0"
   },
   "browser": {
     "./test/utils/repo.js": "./test/utils/repo-browser.js"
@@ -85,8 +84,5 @@
   "pre-push": [
     "lint",
     "test"
-  ],
-  "standard": {
-    "parser": "babel-eslint"
-  }
+  ]
 }
