--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:browser": "aegir test -t browser",
     "lint": "aegir lint",
     "test:perf": "mocha test/performance/all.js",
-    "pinner": "node bin/pinner"
+    "pinner": "node bin/pinner",
+    "sim:watch": "watchify -v --debug sim/javascripts -o sim/sim.js"
   },
   "bin": {
     "pinner": "bin/pinner"
@@ -68,6 +69,7 @@
     "babel-eslint": "^10.0.1",
     "bs58": "^4.0.1",
     "chai": "^4.1.2",
+    "d3": "^5.7.0",
     "dirty-chai": "^2.0.1",
     "execa": "^1.0.0",
     "hat": "0.0.3",
@@ -76,7 +78,8 @@
     "lodash.uniq": "^4.5.0",
     "pull-pair": "^1.1.0",
     "rimraf": "^2.6.2",
-    "sinon": "^7.1.0"
+    "sinon": "^7.1.0",
+    "watchify": "^3.11.0"
   },
   "browser": {
     "./test/utils/repo.js": "./test/utils/repo-browser.js"
