--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Peer-Star App support for real-time collaborative DApps built on top of IPFS",
   "main": "src/index.js",
   "scripts": {
-    "test": "npm run test:node && npm run test:browser",
+    "test": "npm run lint && npm run test:node && npm run test:browser",
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser",
     "lint": "aegir lint",
