--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "big-integer": "^1.6.36",
     "browser-process-hrtime": "^1.0.0",
     "datastore-core": "~0.6.0",
+    "datastore-level": "^0.10.0",
     "debug": "^4.1.0",
     "delay": "^4.1.0",
     "delta-crdts": "~0.5.3",
@@ -55,6 +56,7 @@
     "libp2p-websocket-star": "~0.9.0",
     "libp2p-websockets": "~0.12.0",
     "lodash": "^4.17.10",
+    "memdown": "^3.0.0",
     "msgpack-lite": "~0.1.26",
     "multiaddr": "^5.0.0",
     "multihashing": "~0.3.2",
