--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "big-integer": "^1.6.36",
     "browser-process-hrtime": "^1.0.0",
     "datastore-core": "~0.6.0",
-    "datastore-level": "^0.10.0",
+    "datastore-level": "~0.10.0",
     "debug": "^4.1.0",
     "delay": "^4.1.0",
     "delta-crdts": "~0.5.3",
