feature: post-deploy tests for pinner
This commit adds a test that allows us to test a pinner after it's been
deployed, handy to make sure the deployment is working correctly and
could additionally be used as status checks.

More information in the test file itself.

License: MIT
Signed-off-by: Victor Bjelkholm <git@victor.earth>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser",
     "test:webworker": "aegir test -t webworker",
+    "test:post-deploy": "node test/deployed-pinner-test.js",
     "lint": "aegir lint",
     "test:perf": "mocha test/performance/all.js",
     "pinner": "node bin/pinner",
