chore: adopt ws-star-multi

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "delta-crdts-msgpack-codec": "~0.2.0",
     "frequency-counter": "^1.0.1",
     "interface-datastore": "~0.6.0",
-    "ipfs": "0.34.0",
+    "ipfs": "0.34.2",
     "ipfs-api": "^26.1.2",
     "leftpad": "0.0.1",
     "libp2p": "~0.24.1",
@@ -54,7 +54,7 @@
     "libp2p-crypto": "~0.16.0",
     "libp2p-mplex": "~0.8.0",
     "libp2p-secio": "~0.11.0",
-    "libp2p-websocket-star": "~0.10.0",
+    "libp2p-websocket-star-multi": "^0.4.0",
     "libp2p-websockets": "~0.12.0",
     "lodash": "^4.17.10",
     "memdown": "^3.0.0",
