--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "libp2p-crypto": "~0.16.0",
     "libp2p-mplex": "~0.8.0",
     "libp2p-secio": "~0.11.0",
-    "libp2p-websocket-star-multi": "^0.4.0",
+    "libp2p-websocket-star-multi": "~0.4.0",
     "libp2p-websockets": "~0.12.0",
     "lodash": "^4.17.10",
     "memdown": "^3.0.0",
