--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "peer-id": "~0.12.2",
     "peer-info": "~0.15.1",
     "prom-client": "^11.2.1",
+    "pull-length-prefixed": "^1.3.1",
     "pull-pushable": "^2.2.0",
     "pull-stream": "^3.6.9",
     "radix-64": "^1.0.4",
