--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "peer-base",
   "version": "0.12.0-rc6",
   "description": "Peer-Star App support for real-time collaborative DApps built on top of IPFS",
+  "leadMaintainer": "Jim Pick <jim@jimpick.com>",
   "main": "src/index.js",
   "scripts": {
     "test": "npm run lint && npm run test:browser",
