--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "frequency-counter": "^1.0.1",
     "hat": "0.0.3",
     "interface-datastore": "~0.6.0",
-    "ipfs": "0.34.2",
+    "ipfs": "0.38.0-rc.1",
     "ipfs-api": "^26.1.2",
     "leftpad": "0.0.1",
     "libp2p": "~0.24.4",
     "libp2p-bootstrap": "~0.9.7",
     "libp2p-crypto": "~0.16.0",
+    "libp2p-floodsub": "~0.18.0",
     "libp2p-mplex": "~0.8.4",
     "libp2p-secio": "~0.11.1",
     "libp2p-websocket-star-multi": "~0.4.0",
