--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ matrix:
   - node_js: 8
     env: CXX=g++-4.8
 
+services:
+  - xvfb
+
 script:
   - npm run test:browser
-
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
 
 addons:
   firefox: 'latest'
